2006-05-09  Neal H. Walfield  <neal@gnu.org>

	* gpe/event-db.h (event_set_start): Remove declaration.
	* event-db.c (event_set_recurrence_start): Remove function.
	(event_set_start): Rename from this...
	(event_set_recurrence_start): ... to this.

	* test-alarms.c (do_test): Don't call event_set_start but
	event_set_recurrence_start.
	* test-event-list.c (do_test): Likewise.
	* test-recur-daily.c (do_test): Likewise.
	* test-recur-monthly.c (do_test): Likewise.
	* test-recur-weekly.c (do_test): Likewise.

2006-05-08  Neal H. Walfield  <neal@gnu.org>

	* gpe/event-db.h (EVENT_TYPE_DB): Rename from this...
	(TYPE_EVENT_DB): ... to this.  Update users.
	(IS_EVENT_DB): New macro.
	(IS_EVENT_DB_CLASS): New macro.
	(EVENT_DB_GET_CLASS): New macro.
	(EventDBAlarmFiredFunc): New typedef.
	(event_db_next_alarm): New declaration.
	(event_db_list_unacknowledged_alarms): New declaration.
	(event_acknowledge): New declaration.
	* event-db.c (EventDBClass): Add fields alarm_fired_signal and
	alarm_fired.
	(struct _EventDB): Add fields upcoming_alarms, period_end, alarm
	and alarms_fired_through.
	(RESOLVE_CLONE): Don't use a local variable named e, use _e to
	avoid possible name conflicts.
	(event_db_class_init): Initialize EDB_CLASS->ALARM_FIRED_SIGNAL.
	(event_db_finalize): Cancel EDB->ALARM and EDB->LAUNDRY_BUZZER as
	required.  Call do_laundry if EDB->LAUNDRY_BUZZER was set.  Clean
	up EDB->UPCOMING_ALARMS.
	(event_db_set_alarms_fired_through): New function.
	(event_mark_unacknowledged): Likewise.
	(event_acknowledge): Likewise.
	(event_remove_upcoming_alarms): Likewise.
	(event_add_upcoming_alarms): Likewise.
	(buzzer): Likewise.
	(event_db_list_unacknowledged_alarms): Likewise.
	(event_db_new): Read EDB->ALARMS_FIRED_THROUGH from new table
	alarms_fired_through.  Create new table alarms_unacknowledged.
	(event_db_list_for_period_internal): Break the body of this
	function into...
	(event_list): ... this function.  Provide parameter to limit the